# gitlab-mcp

./: .env.example  .gitignore  .gitlab-ci.yml  DYNAMIC_TYPES.md  README.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_server.py  server.py  work_items_guide.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  sync-upstream.yml
gitlab_mcp/: __init__.py  __main__.py  server.py
src/: __init__.py
src/api/: __init__.py  async_utils.py  client.py  custom_exceptions.py  exceptions.py  graphql_client.py  rest_client.py
src/api/exceptions/: __init__.py  base.py  branch.py  file.py
src/schemas/: __init__.py  base.py  branches.py  commits.py  epics.py  files.py  filters.py  groups.py  issues.py  iterations.py  jobs.py  labels.py  merge_requests.py  milestones.py  pipelines.py  repositories.py  search.py  users.py  work_items.py
src/services/: __init__.py  branches.py  epics.py  files.py  groups.py  issues.py  iterations.py  jobs.py  labels.py  merge_requests.py  milestones.py  pipelines.py  repositories.py  search.py  users.py  work_item_types.py  work_items.py
src/services/utils/: issue_utils.py
src/tools/: __init__.py  branches.py  files.py  groups.py  issues.py  jobs.py  merge_requests.py  pipelines.py  repositories.py  search.py  users.py
tests/: TEST_CONFIGURATION.md  __init__.py  conftest.py  test_branches.py  test_files.py  test_integration.py  test_iterations.py  test_milestones.py  test_repositories.py  test_search.py  test_work_items.py
tests/integration/: __init__.py
tests/unit/: test_work_items_unit.py
tests/utils/: __init__.py  cleanup.py  test_data.py  validators.py
