[project]
name = "gitlab-mcp-server"
version = "0.3.1"
description = "GitLab MCP (Model Context Protocol) server for interacting with GitLab API through AI Clients"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "mcp[cli]>=1.13.1",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "asyncio>=3.4.3",
    "python-dotenv>=1.1.0",
    "jsonrpc>=3.0.1",
    "httpx>=0.25.0",
    "gql[httpx]>=4.0.0",
]
authors = [
    { name = "Adit pal Singh", email = "aditpalsing@gmail.com" },
    { name = "Dmitry Prudnikov", email = "mail@polaz.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["gitlab", "mcp", "ai", "server"]

[project.urls]
Homepage = "https://github.com/polaz/gitlab-mcp"
Documentation = "https://github.com/polaz/gitlab-mcp#readme"

[project.scripts]
gitlab-mcp = "gitlab_mcp:main"

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
]
ruff = ["ruff>=0.11.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "gitlab_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "faker>=37.6.0",
    "mypy>=1.15.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.1.5",
]
